Generate openapi specification from JSDoc (#133)
* Generate api-spec from jsdoc

* Ensure that doc folder exists

* Split routes into separate file

* Set module.export for routes

* Fix typo in index.js

* Create npm task for generating swagger spec

* Copy yml in dockerfile

* Update documentation

* swagger -> openapi

* Update description of container responses
