# doc/api-doc.yml
@@ -1,183 +1,83 @@
-swagger: "2.0"
 info:
-  title: "A QIX Engine discovery service for Qlik Elastic"
-  description: "REST API for discovering QIX Engines running in Docker containers. Different modes exist, 
-  local mode and swarm mode. Local mode should be used when the mira service and the QIX Engine containers
-  run on one single Docker engine reachable on localhost. Primary used for development purpose.
-  Swarm mode should be used when the mira service is run in Docker Swarm; mira is configured as a swarm
-  service and QIX Engine is run as services in the same Docker Swarm cluster."
-  version: "0.0.1"
-host: "localhost:9100"
+  title: A QIX Engine discovery service for Qlik Elastic
+  version: 0.0.1
+  description: >-
+    REST API for discovering QIX Engines running in Docker containers. Different
+    modes exist, local, swarm and kubernetes mode.
+host: 'localhost:9100'
 schemes:
-  - "http"
-basePath: "/v1"
-produces:
-  - "application/json"
-consumes:
-  - "application/json"
-tags:
-  - name: "engines"
-    description: "List available QIX Engines"
-  - name: "health"
-    description: "Health status of the service"
-x-qlik-visibility: "private"
-x-qlik-stability: "experimental"
+  - http
+basePath: /v1
+x-qlik-visibility: private
+x-qlik-stability: experimental
+swagger: '2.0'
 paths:
+  /health:
+    get:
+      description: Returns health status of the Mira service
+      responses:
+        '200':
+          description: OK
   /engines:
     get:
-      tags:
-        - "engines"
-      summary: "List available QIX Engines"
-      description: >
-        Lists available QIX Engines. In plain form, without any parameter provided, all available engines are returned.
-        If the `properties` parameter is passed, only QIX Engines with matching properties are returned.
+      description: Lists available QIX Engines.
       produces:
-        - "application/json"
-      parameters:
-        - name: "properties"
-          in: query
-          type: object
-          required: false
-          schema:
-            $ref: "#/definitions/engineProperties"
+        - application/json
       responses:
-        "200":
-          description: "successful operation"
+        '200':
+          description: successful operation
           schema:
             type: array
             items:
-              $ref: "#/definitions/engineInfo"
-
-  /health:
-    get:
-      tags:
-        - "health"
-      summary: "Get health status of mira service"
-      description: ""
-      responses:
-        "200":
-          description: "The service is alive and healthy"
-
+              $ref: '#/definitions/containerInfo'
 definitions:
   engineInfo:
-    description: "QIX Engine information"
-    type: "object"
+    type: object
     properties:
-      properties: 
-        description: "Properties for the QIX Engine"
-        type: "object"
-        schema: 
-          $ref: "#/definitions/engineProperties"
-      ipAddress:
-        description: "IP address to use when connecting to the QIX Engine"
-        type: "string"
+      ip:
+        description: IP address to use when connecting to the QIX Engine.
+        type: string
       port:
-        description: "Port number to use when connecting to the QIX Engine"
-        type: "number"
-      networks:
-        description: "Networks for the QIX Engine"
-        type: "array"
-        items:
-          $ref: "#/definitions/networkInfo"
-
-  engineProperties:
-    description: "Properties for a QIX Engine"
-    type:  "object"
+        description: Port to use when communicating with the QIX Engine API.
+        type: number
+      metricsPort:
+        description: Port to use when retrieving the QIX Engine metrics.
+        type: number
+      status:
+        $ref: '#/definitions/containerStatus'
+      health:
+        description: Last health endpoint response of the QIX Engine.
+        type: object
+      metrics:
+        description: Last metrics endpoint response of the QIX Engine.
+  containerInfo:
+    type: object
+    required:
+      - engine
     properties:
-      com.docker.compose.config-hash: 
-        description: ""
-        type: "string"
-      com.docker.compose.container-number:
-        description: ""
-        type: "string"
-      com.docker.compose.oneoff: 
-        description: ""
-        type: "string"
-      com.docker.compose.project:
-        description: ""
-        type: "string"
-      com.docker.compose.service:
-        description: ""
-        type: "string"
-      com.docker.compose.version:
-        description: ""
-        type: "string"
-      version:
-        description: "Engine version"
-        type: "string"
-      started:
-        description: "ISO timestamp when the engine service was started"
-        type: "string"
-      mem.committed:
-        description: "Total amount of committed memory for the engine process"
-        type: "number"
-      mem.allocated:
-        description: "Total amount of allocated memory (committed + reserved)"
-        type: "number"
-      mem.free:
-        description: "Total amount of free memory (minimum of free virtual and physical memory)"
-        type: "number"
-      cpu.total:
-        description: "Percentage of the CPU used by the engine, averaged over a time period of 30 seconds"
-        type: "number"
-      session.active:
-        description: "Number of active engine sessions. A session is active when a user is currently performing some action on an app, for example, making selections or creating content"
-        type: "number"
-      session.total:
-        description: "Total number of engine sessions"
-        type: "number"
-      apps.active_docs:
-        description: "An array of the GUIDs of active apps. Empty if no apps are active. An app is active when a user is currently performing some action on it"
-        type: "array"
-        items: "string"
-      apps.loaded_docs:
-        description: "An array of the GUIDs of loaded (open) apps. Empty if no apps are loaded"
-        type: "array"
-        items: "string"
-      apps.calls:
-        description: "Total number of requests made to the engine"
-        type: "number"
-      apps.selections:
-        description: "Total number of selections made to the engine"
-        type: "number"
-      users.active:
-        description: "Number of distinct active users. An active user is one who is currently performing an action on an app"
-        type: "number"
-      users.total:
-        description: "Total number of distinct users within the current engine sessions."
-        type: "number"
-      cache.hits:
-        description: "Number of cache hits"
-        type: "number"
-      cache.lookups:
-        description: "Number of cache lookups"
-        type: "number"
-      cache.cached:
-        description: "Number of cache objects added"
-        type: "number"
-      cache.replaced:
-        description: "Number of cache objects replaced"
-        type: "number"
-      cache.bytes_added:
-        description: "Size in bytes of cache objects added"
-        type: "number"
-      healthy:
-        description: "The QIX Engine is up and running and healthy"
-        type: "boolean"
-
-  networkInfo:
-    description: "Network information"
-    type: "object"
-    properties:
-      name: 
-        description: "Network name"
-        type: "string"
-      addresses:
-        description: "IP addresses for the network"
-        type: "array"
-        items: "string"
-
-
-
-
-
+      engine:
+        $ref: '#/definitions/engineInfo'
+      local:
+        type: object
+        description: >-
+          Container information in verbatim format as returned by the Docker
+          Engine Remote API.
+      swarm:
+        type: object
+        description: >-
+          Task information in verbatim format as returned by the Docker Engine
+          Remote API.
+      kubernetes:
+        type: object
+        description: Pod information in verbatim format as returned by the Kubernetes API.
+  containerStatus:
+    type: string
+    description: Status of the QIX Engine.
+    enum:
+      - OK
+      - UNHEALTHY
+      - NO_METRICS
+responses: {}
+parameters: {}
+securityDefinitions: {}
+tags: []
